--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <mockito.version>4.0.0</mockito.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <commons-lang.version>2.6</commons-lang.version>
+    <log4j2.version>2.16.0</log4j2.version>
 
     <sonar.exclusions>
       src/main/java/org/folio/qm/domain/entity/**,
